# Optimisation_mineral_recovery

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run_tests.py
includes/: CCircuit.h  CUnit.h  Evaluate_Circuit.h  Genetic_Algorithm.h
src/: CCircuit.cpp  Evaluate_Circuit.cpp  Genetic_Algorithm.cpp  main.cpp  mainP.cpp
tests/: test1.cpp  test2.cpp  test_GeneticAlgorithm.cpp
visualization/: README.md  environment.yml  graphviz_example.py  post_processing.py  requirements.txt
